Hero acabat i fonts importades

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -9,7 +9,7 @@
   "hero": {
     "title": "A new way of luxury living",
     "subtitle": "Calablanca Residences · Sitges",
-    "cta": "Solicitar Información"
+    "description": "Una colección exclusiva de viviendas donde el confort, la arquitectura y el Mediterráneo conviven en equilibrio."
   },
   "welcome": {
     "title": "Bienvenidos a Cala Blanca Residences",
