canvis al header i hero + nou logo

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -3,7 +3,7 @@
     "residence": "Residence",
     "location": "Ubicación",
     "houses": "Opciones casas",
-    "calculator": "Calcula tú hipoteca",
+    "calculator": "Calcula tu hipoteca",
     "contact": "Solicitar información"
   },
   "hero": {
