--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -89,11 +89,27 @@
     "title": "Location",
     "subtitle": "Sitges · Mediterranean in its purest form",
     "description": "Just 30 minutes from Barcelona, Sitges is an elegant and sophisticated coastal enclave, surrounded by the Garraf natural park and known for its Mediterranean lifestyle.",
+    "distancesTitle": "Calablanca Residences is located:",
     "distances": {
-      "beach": "10 minutes from the beach",
+      "beach": "A few minutes from the beach and Sitges center",
       "airport": "20 minutes from the airport",
       "services": "Close to international schools and services"
-    }
+    },
+    "cta": "Request Information",
+    "mapAlt": "Location map of Calablanca Residences in Sitges",
+    "poi": [
+      "Aiguadolç Marina",
+      "Train Station",
+      "Sant Sebastià Beach",
+      "Town Hall Square",
+      "Church of Sant Bartomeu and Santa Tecla",
+      "Can Robert Park",
+      "Yacht Club",
+      "Sitges Beach",
+      "",
+      "Seafront Promenade",
+      "Terramar Park"
+    ]
   },
   "houses": {
     "title": "Choose the house you want",
