unificar h2 i canviar ilustracions icons characterisitics

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -35,9 +35,9 @@
       "pool": "Community pool",
       "chill": "Chill out rooftop",
       "garden": "Low maintenance landscaping",
-      "kitchen": "Open kitchen living room",
+      "closets": "Built-in wardrobes",
       "storage": "Storage room",
-      "elevator": "Elevator",
+      "aerothermal": "Aerothermal heating",
       "terraces": "Private terraces and gardens"
     }
   },
