--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -35,9 +35,9 @@
       "pool": "Piscina comunitaria",
       "chill": "Cubierta chill out",
       "garden": "Jardinería de bajo mantenimiento",
-      "kitchen": "Cocina comedor abierta al salón",
+      "closets": "Armarios empotrados",
       "storage": "Trastero",
-      "elevator": "Ascensor",
+      "aerothermal": "Aerotermia",
       "terraces": "Terrazas y jardines privados"
     }
   },
