afegir efecte text-reveal a tots els titols i cambiar svg line del timeline en mobile

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -28,7 +28,7 @@
     "cta": "Solicitar Información"
   },
   "characteristics": {
-    "title": "Características de la promoción",
+    "title": "Características de la Promoción",
     "features": {
       "parking": "Parking comunitario",
       "pool": "Piscina comunitaria",
