metres quadtrats corregits

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -22,7 +22,7 @@
     "priceLabel": "Price from",
     "priceValue": "€850,000",
     "surfaceLabel": "Surface from",
-    "surfaceValue": "100 m2",
+    "surfaceValue": "100 m²",
     "bedroomsLabel": "Bedrooms",
     "bedroomsValue": "2-4",
     "cta": "Request Information"
