--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -22,7 +22,7 @@
     "priceLabel": "Precio desde",
     "priceValue": "850.000€",
     "surfaceLabel": "Superficie desde",
-    "surfaceValue": "100 m2",
+    "surfaceValue": "100 m²",
     "bedroomsLabel": "Dormitorios",
     "bedroomsValue": "2-4",
     "cta": "Solicitar Información"
