canvis petits de la reunio amb mariona

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,7 +7,7 @@
     "contact": "Request information"
   },
   "hero": {
-    "title": "A new way of luxury living",
+    "title": "A New Way of Luxury Living",
     "subtitle": "Calablanca Residences · Sitges",
     "description": "An exclusive collection of homes where comfort, architecture and the Mediterranean coexist in harmony."
   },
