--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -7,7 +7,7 @@
     "contact": "Solicitar información"
   },
   "hero": {
-    "title": "A new way of luxury living",
+    "title": "A New Way of Luxury Living",
     "subtitle": "Calablanca Residences · Sitges",
     "description": "Una colección exclusiva de viviendas donde el confort, la arquitectura y el Mediterráneo conviven en equilibrio."
   },
